final functionality with image upload

--- a/templates/article_delete.html
+++ b/templates/article_delete.html
@@ -5,7 +5,7 @@
 <body style="background-color:#C2C2C2;"></body>
 <h1>Delete</h1>
 <form action="" method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ article.title }}"?</p>
+    <p>Are you sure you want to delete Your Profile"{{ article.title }}"?</p>
     <button class="btn btn-danger ml-2" type="submit">Confirm</button>
 </form>
 {% endblock content %}
