--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,16 @@
-{% extends 'base.html' %}
-{% block title %}Home{% endblock title %}
-{% block content %}
-<br />
-<style>
-    h1 {
-        text-shadow: 2px 2px 5px red;
-    }
-</style>
+<body background="https://raw.githubusercontent.com/jdbennett1/starU-app/main/cool-background%20(1).png">
+    {% extends 'base.html' %}
+    {% block title %}Home{% endblock title %}
 
-<body style="background-image: linear-gradient(to bottom right, rgb(98, 96, 113), rgb(89, 144, 164));">
+    {% block content %}
+    <br />
+    <style>
+        h1 {
+            text-shadow: 2px 2px 5px red;
+        }
+    </style>
+
+
     <!--<div class="jumbotron">-->
     <h1 class="display-4">Star U</h1>
     <p class="lead">A Reviewing website to know where you stand among the rest.</p>
@@ -21,4 +23,5 @@
 
     {% endblock content %}
 </body>
+
 <!--"background-color:#C2C2C2;"-->
