--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,13 +2,48 @@
 {% block title %}Log In{% endblock title %}
 {% block content %}
 
-<body style="background-image: linear-gradient(to bottom right, rgb(98, 96, 113), rgb(89, 144, 164));">
-    <h2>Log In</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <p>If you do not have an account then click here to <a href="{% url 'signup' %}">Sign Up</a>
-        </p>
-        <button class="btn btn-success ml-2" type="submit">Log In</button>
-    </form>
-    {% endblock content %}
+<h2>Log In</h2>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <p>If you do not have an account then click here to <a href="{% url 'signup' %}">Sign Up</a>
+    </p>
+    <button class="btn btn-success ml-2" type="submit">Log In</button>
+</form>
+{% endblock content %}
+<style>
+    body {
+        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 400% 400%;
+        animation: gradient 15s ease infinite;
+        height: 100vh;
+    }
+
+    @keyframes gradient {
+        0% {
+            background-position: 0% 50%;
+        }
+
+        50% {
+            background-position: 100% 50%;
+        }
+
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+</style>
+<div class="d-flex flex-column justify-content-center w-100 h-100">
+
+    <div class="d-flex flex-column justify-content-center align-items-center">
+
+        <div class="btn-group my-5">
+            <a
+                href="https://codepen-api-export-production.s3.us-west-2.amazonaws.com/zip/PEN/pyBNzX/1578778289271/pure-css-gradient-background-animation.zip"></a>
+
+
+
+            </a>
+
+        </div>
+    </div>
