--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,15 +1,17 @@
 <!-- templates/signup.html -->
+
+<body style="background-image: linear-gradient(to bottom right, rgb(50, 168, 157), rgb(89, 144, 164));"></body>
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Sign Up{% endblock title%}
 {% block content %}
 
-<body style="background-color:#C2C2C2;"></body>
-<h2>Sign Up</h2>
+
+<h2>Sign Up for Star U</h2>
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button class="btn btn-success" type="submit">Sign Up</button>
-    <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
+
 </form>
 {% endblock content %}
