--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,7 @@
     <p class="lead">A Reviewing website to know where you stand among the rest.</p>
     <p class="lead"> Start by clicking on "View All Profiles" or using the Search Bar above to find someone Specific
     </p>
+    <p class="lead"> You can also click on the About the App button above to learn more</p>
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="{% url 'article_list' %}" role="button">View All Profiles</a>
     </p>
