Final Commit before presentation

--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -92,9 +92,9 @@
             <div class="card-body">
                 <!-- Changes start here! -->
                 <p></p>
-                <a href="{% url 'article_edit' article.pk %}">Edit</a> |
-                <a href="{% url 'article_delete' article.pk %}">Delete</a> |
-                <a href="{% url 'article_new' %}">Reviews</a>
+                <a href="{% url 'article_edit' article.pk %}">Edit Profile</a> |
+                <a href="{% url 'article_delete' article.pk %}">Delete Profile</a> |
+                <a href="{% url 'article_new' %}">All Reviews</a>
 
             </div>
         </div>
